--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,6 +58,20 @@ jobs:
           manifest-file: .release-please-manifest.json
           token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
 
+      - name: Create Sentry Release
+        if: ${{ steps.release.outputs.release_created }}
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: game-scrobbler
+          SENTRY_PROJECT: GsPlugin
+        run: |
+          npm install -g @sentry/cli
+          $version = "${{ steps.release.outputs.tag_name }}".TrimStart('v')
+          sentry-cli releases new "GsPlugin@$version"
+          sentry-cli releases set-commits "GsPlugin@$version" --auto
+          sentry-cli upload-dif --type=portable "$Env:GITHUB_WORKSPACE\bin\Release" --log-level=info
+          sentry-cli releases finalize "GsPlugin@$version"
+
       - name: Rename Packed File Name to Release Tag
         if: github.ref == 'refs/heads/main'
         id: rename
