--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,7 +4,7 @@
       "package-name": "GsPlugin",
       "changelog-path": "CHANGELOG.md",
       "release-type": "simple",
-      "bump-minor-pre-major": false,
+      "bump-minor-pre-major": true,
       "bump-patch-for-minor-pre-major": false,
       "draft": false,
       "prerelease": false,
