--- a/GsPlugin.csproj
+++ b/GsPlugin.csproj
@@ -108,8 +108,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiResult.cs" />
     <Compile Include="GsLogger.cs" />
     <Compile Include="GsApiClient.cs" />
+    <Compile Include="IGsApiClient.cs" />
     <Compile Include="GsCircuitBreaker.cs" />
     <Compile Include="GsData.cs" />
     <Compile Include="GsPlugin.cs" />
