--- a/GsPlugin.csproj
+++ b/GsPlugin.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="packages\Sentry.5.15.1\build\Sentry.props" Condition="Exists('packages\Sentry.5.15.1\build\Sentry.props')" />
+  <Import Project="packages\Sentry.6.1.0\build\Sentry.props" Condition="Exists('packages\Sentry.6.1.0\build\Sentry.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -56,8 +56,8 @@
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="Sentry, Version=5.15.1.0, Culture=neutral, PublicKeyToken=fba2ec45388e2af0, processorArchitecture=MSIL">
-      <HintPath>packages\Sentry.5.15.1\lib\net462\Sentry.dll</HintPath>
+    <Reference Include="Sentry, Version=6.1.0.0, Culture=neutral, PublicKeyToken=fba2ec45388e2af0, processorArchitecture=MSIL">
+      <HintPath>packages\Sentry.6.1.0\lib\net462\Sentry.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.5.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -117,6 +117,7 @@
     <Compile Include="GsPlugin.cs" />
     <Compile Include="GsPluginSettings.cs" />
     <Compile Include="GsScrobblingService.cs" />
+    <Compile Include="GsSuccessStoryHelper.cs" />
     <Compile Include="GsAccountLinkingService.cs" />
     <Compile Include="GsSentry.cs" />
     <Compile Include="GsUriHandler.cs" />
@@ -173,9 +174,9 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105.The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('packages\Microsoft.Web.WebView2.1.0.3485.44\build\Microsoft.Web.WebView2.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Microsoft.Web.WebView2.1.0.3485.44\build\Microsoft.Web.WebView2.targets'))" />
-    <Error Condition="!Exists('packages\Sentry.5.15.1\build\Sentry.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Sentry.5.15.1\build\Sentry.props'))" />
-    <Error Condition="!Exists('packages\Sentry.5.15.1\build\Sentry.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Sentry.5.15.1\build\Sentry.targets'))" />
+    <Error Condition="!Exists('packages\Sentry.6.1.0\build\Sentry.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Sentry.6.1.0\build\Sentry.props'))" />
+    <Error Condition="!Exists('packages\Sentry.6.1.0\build\Sentry.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Sentry.6.1.0\build\Sentry.targets'))" />
   </Target>
   <Import Project="packages\Microsoft.Web.WebView2.1.0.3485.44\build\Microsoft.Web.WebView2.targets" Condition="Exists('packages\Microsoft.Web.WebView2.1.0.3485.44\build\Microsoft.Web.WebView2.targets')" />
-  <Import Project="packages\Sentry.5.15.1\build\Sentry.targets" Condition="Exists('packages\Sentry.5.15.1\build\Sentry.targets')" />
+  <Import Project="packages\Sentry.6.1.0\build\Sentry.targets" Condition="Exists('packages\Sentry.6.1.0\build\Sentry.targets')" />
 </Project>
